fix: global styles bleeding from explorer

--- a/Frontend/src/app/modules/workspace/explorer/explorer.component.scss
+++ b/Frontend/src/app/modules/workspace/explorer/explorer.component.scss
@@ -7,7 +7,7 @@
         margin-top: 5px;
     }
 }
-::ng-deep {
+:host ::ng-deep {
     es-node-entries-card-grid {
         display: block;
         margin: 10px 20px;
